# accelerate-nofib

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  accelerate-nofib.cabal  stack-7.10.yaml  stack-8.0.yaml  stack-8.2.yaml  stack-8.4.yaml
src/Data/Array/Accelerate/Test/: NoFib.hs  Similar.hs
src/Data/Array/Accelerate/Test/NoFib/: Base.hs  Sharing.hs
