name:                 accelerate-nofib
version:              1.2.0.0
synopsis:             Regression test suite for the Accelerate language
-- description:
homepage:             http://acceleratehs.org
license:              BSD3
license-file:         LICENSE
author:               Trevor L. McDonell
maintainer:           Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
-- copyright:
-- category:
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:
    CHANGELOG.md
    README.md

library
  hs-source-dirs:       src
  default-language:     Haskell2010

  build-depends:
          base                          >= 4.7 && < 4.12

  -- exposed-modules:
  -- other-modules:

  ghc-options:
        -Wall

-- vim: nospell
